k8s/apps/media/arr/lidarr/svc-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr-web
  namespace: arr
spec:
  type: ClusterIP
  selector:
    app: lidarr
  ports:
    - name: web
      port: 80
      targetPort: http
