k8s/apps/media/arr/lidarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: arr
spec:
  type: ClusterIP
  selector:
    app: lidarr
  ports:
    - name: web
      port: 80
      targetPort: http
